// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkNavigationBarIconButtonIOS should render correctly 1`] = `
<View
  accessibilityLabel="Edit"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 3,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "fontSize": 28,
            "lineHeight": 28,
          },
          Object {
            "color": "rgb(82, 76, 97)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarIconButtonIOS should render correctly disabled 1`] = `
<View
  accessibilityLabel="Close"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginStart": 3,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "fontSize": 28,
            "lineHeight": 28,
          },
          Object {
            "color": "rgb(178, 174, 189)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarIconButtonIOS should render correctly leading configuration 1`] = `
<View
  accessibilityLabel="Close"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginStart": 3,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "fontSize": 28,
            "lineHeight": 28,
          },
          Object {
            "color": "rgb(82, 76, 97)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarIconButtonIOS should resepect "disabledTintColor" 1`] = `
<View
  accessibilityLabel="Done"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 3,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "fontSize": 28,
            "lineHeight": 28,
          },
          Object {
            "color": "red",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarIconButtonIOS should resepect "tintColor" 1`] = `
<View
  accessibilityLabel="Done"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 3,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "fontSize": 28,
            "lineHeight": 28,
          },
          Object {
            "color": "red",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;
